Fix event info cutting on mobile

--- a/src/css/Agenda.css
+++ b/src/css/Agenda.css
@@ -143,7 +143,11 @@
     }
 
     .agenda .info {
-        width: auto;
+        width: calc(100% - (2 * var(--spacing)));
+    }
+
+    .agenda .schedule .event p {
+        font-size: 1.5rem;
     }
 
     .agenda .map-container {
